@@ -1,5 +1,11 @@
 2008-02-08  Sven Herzberg  <sven@imendio.com>
 
+	* src/ui/ui-main.c: (ui_main_new), (ui_main_enabled_games_item),
+	(ui_main_game_changed): use a menu bar generated by GtkUIManager, not
+	by glade
+
+2008-02-08  Sven Herzberg  <sven@imendio.com>
+
 	* data/monkey-bubble.glade: dropped the unused game menu
 
 2008-02-08  Sven Herzberg  <sven@imendio.com>
